# pbot2_public

./: .env  .gitignore  README.md  app.py  pyproject.toml
pbot2/: database.py  die.py  insults.py  logger.py  message_processor.py
pbot2/raw_data/: insults_seed.csv  insults_test_seed.csv  targets_seed.csv
tests/: test_pbot2.py
